kubernetes/charts/n8n/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-route
  namespace: apps
spec:
  parentRefs:
    - name: traefik-gateway
      kind: Gateway
      namespace: traefik
  hostnames:
    - "n8n.local.ildoc.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n-n8n
          port: 80
